--- a/scrnaseq-wf/config/scrnaseq_patterns.yaml
+++ b/scrnaseq-wf/config/scrnaseq_patterns.yaml
@@ -1,16 +1,33 @@
 cellranger:
-  raw: '{sample_dir}/{sample}/outs/raw_gene_bc_matrices'
-  raw_h5: '{sample_dir}/{sample}/outs/raw_gene_bc_matrices_h5.h5'
-  filtered: '{sample_dir}/{sample}/outs/filtered_gene_bc_matrices'
-  filtered_h5: '{sample_dir}/{sample}/outs/filtered_gene_bc_matrices_h5.h5'
-  bam: '{sample_dir}/{sample}/outs/possorted_genome_bam.bam'
-  bai: '{sample_dir}/{sample}/outs/possorted_genome_bam.bam.bai'
+  raw: 'data/scrnaseq_samples/{sample}/outs/raw_gene_bc_matrices'
+  raw_h5: 'data/scrnaseq_samples/{sample}/outs/raw_gene_bc_matrices_h5.h5'
+  filtered: 'data/scrnaseq_samples/{sample}/outs/filtered_gene_bc_matrices'
+  filtered_h5: 'data/scrnaseq_samples/{sample}/outs/filtered_gene_bc_matrices_h5.h5'
+  bam: 'data/scrnaseq_samples/{sample}/outs/possorted_genome_bam.bam'
+  bai: 'data/scrnaseq_samples/{sample}/outs/possorted_genome_bam.bam.bai'
 
 cellranger_force:
-  raw: '{sample_dir}/{sample}_force/outs/raw_gene_bc_matrices'
-  raw_h5: '{sample_dir}/{sample}_force/outs/raw_gene_bc_matrices_h5.h5'
-  filtered: '{sample_dir}/{sample}_force/outs/filtered_gene_bc_matrices'
-  filtered_h5: '{sample_dir}/{sample}_force/outs/filtered_gene_bc_matrices_h5.h5'
-  bam: '{sample_dir}/{sample}_force/outs/possorted_genome_bam.bam'
-  bai: '{sample_dir}/{sample}_force/outs/possorted_genome_bam.bam.bai'
+  raw: 'data/scrnaseq_samples/{sample}_force/outs/raw_gene_bc_matrices'
+  raw_h5: 'data/scrnaseq_samples/{sample}_force/outs/raw_gene_bc_matrices_h5.h5'
+  filtered: 'data/scrnaseq_samples/{sample}_force/outs/filtered_gene_bc_matrices'
+  filtered_h5: 'data/scrnaseq_samples/{sample}_force/outs/filtered_gene_bc_matrices_h5.h5'
+  bam: 'data/scrnaseq_samples/{sample}_force/outs/possorted_genome_bam.bam'
+  bai: 'data/scrnaseq_samples/{sample}_force/outs/possorted_genome_bam.bam.bai'
 
+parquet:
+  raw: 'data/raw.parquet'
+  norm: 'data/normalized_read_counts.parquet'
+  tsne: 'data/tsne.parquet'
+  clusters: 'data/clusters.parquet'
+  clusters4: 'data/clusters.res.0.4.parquet'
+  clusters6: 'data/clusters.res.0.6.parquet'
+  metadata: 'data/metadata.parquet'
+  biomarkers4: 'data/biomarkers_res.0.4.parquet'
+  biomarkers6: 'data/biomarkers_res.0.6.parquet'
+  biomarkers1: 'data/biomarkers_res.1.parquet'
+
+normalized:
+  cpm: 'data/cpm.parquet'
+  tpm: 'data/tpm.parquet'
+  rpkm: 'data/rpkm.parquet'
+  zscore_tpm: 'data/zscore_tpm.res.0.4.parquet'
