--- a/scrnaseq-wf/Snakefile
+++ b/scrnaseq-wf/Snakefile
@@ -134,14 +134,14 @@ rule scrnaseq_rmarkdown:
         mtx1=utils.flatten(c.targets['cellranger_force']['filtered_h5']),
         rmd='scripts/scrnaseq_combine_force.Rmd',
     output:
-        html='scripts/scrnaseq_combine_force.html',
-        raw='data/scrnaseq_combine_force/raw.tsv',
-        norm='data/scrnaseq_combine_force/normalized_read_counts.tsv',
-        clusters='data/scrnaseq_combine_force/clusters.tsv',
-        metadata='data/scrnaseq_combine_force/metadata.tsv',
-        biomarkers4='data/scrnaseq_combine_force/biomarkers_res.0.4.tsv',
-        biomarkers6='data/scrnaseq_combine_force/biomarkers_res.0.6.tsv',
-        biomarkers1='data/scrnaseq_combine_force/biomarkers_res.1.tsv',
+        html=c.targets['seurat']['html'],
+        raw=c.targets['seurat']['raw'],
+        norm=c.targets['seurat']['norm'],
+        clusters=c.targets['seurat']['clusters'],
+        metadata=c.targets['seurat']['metadata'],
+        biomarkers4=c.targets['seurat']['biomarkers4'],
+        biomarkers6=c.targets['seurat']['biomarkers6'],
+        biomarkers1=c.targets['seurat']['biomarkers1'],
     shell:
         'Rscript -e '
         '''"rmarkdown::render('{input.rmd}', 'knitrBootstrap::bootstrap_document')"'''
@@ -150,8 +150,8 @@ rule scrnaseq_rmarkdown:
 ruleorder: split_clusters > tsv_to_parquet
 
 rule tsv_to_parquet:
-    input: 'data/scrnaseq_combine_force/{fname}.tsv'
-    output: 'data/{fname}.parquet'
+    input: '../output/scrnaseq-wf/scrnaseq_combine_force/{fname}.tsv'
+    output: '../output/scrnaseq-wf/{fname}.parquet'
     run:
         import pandas as pd
         df = pd.read_csv(input[0], sep='\t', index_col=0)
@@ -159,10 +159,10 @@ rule tsv_to_parquet:
 
 
 rule split_clusters:
-    input: 'data/clusters.parquet'
+    input: c.targets['parquet']['clusters']
     output:
-        res4='data/clusters.res.0.4.parquet',
-        res6='data/clusters.res.0.6.parquet',
+        res4=c.targets['parquet']['clusters4'],
+        res6=c.targets['parquet']['clusters6'],
     run:
         import pandas as pd
         df = pd.read_parquet(input[0])
@@ -180,8 +180,8 @@ rule split_clusters:
 
 
 rule gene_lengths:
-    input: '../bulk-wf/data/gene_lengths.tsv'
-    output: 'data/gene_lengths.parquet'
+    input: '../output/bulk-wf/gene_lengths.tsv'
+    output: c.patterns['parquet']['gene_lens']
     run:
         import pandas as pd
         df = pd.read_csv(input[0], sep='\t', index_col=0)
@@ -189,8 +189,8 @@ rule gene_lengths:
 
 
 rule cpm:
-    input: 'data/raw.parquet'
-    output: 'data/cpm.parquet'
+    input: c.targets['parquet']['raw']
+    output: c.targets['normalized']['cpm']
     run:
         from larval_gonad_ovary.normalization import cpm
         raw = pd.read_parquet(input[0])
@@ -199,8 +199,8 @@ rule cpm:
 
 
 rule tpm:
-    input: 'data/raw.parquet', rules.gene_lengths.output
-    output: 'data/tpm.parquet'
+    input: c.targets['parquet']['raw'], rules.gene_lengths.output
+    output: c.targets['normalized']['tpm']
     run:
         import pandas as pd
         from larval_gonad_ovary.normalization import tpm
@@ -211,8 +211,8 @@ rule tpm:
 
 
 rule rpkm:
-    input: 'data/raw.parquet', rules.gene_lengths.output
-    output: 'data/rpkm.parquet'
+    input: c.targets['parquet']['raw'], rules.gene_lengths.output
+    output: c.targets['normalized']['rpkm']
     run:
         import pandas as pd
         from larval_gonad_ovary.normalization import rpkm
@@ -223,8 +223,8 @@ rule rpkm:
 
 
 rule zscore_tpm:
-    input: 'data/{fname}.parquet'
-    output: 'data/zscore_{fname}.parquet'
+    input: '../output/scrnaseq-wf/{fname}.parquet'
+    output: '../output/scrnaseq-wf/zscore_{fname}.parquet'
     run:
         import pandas as pd
         from larval_gonad_ovary.normalization import zscore
@@ -237,11 +237,11 @@ rule tpm_by_cluster:
     input:
         tpm=rules.tpm.output,
         cluster=rules.split_clusters.output.res4
-    output: 'data/tpm.res.0.4.parquet'
+    output: c.targets['normalized']['tpm_res4']
     run:
         import pandas as pd
-        tpm = pd.read_parquet('../scrnaseq-wf/data/tpm.parquet')
-        clusters = pd.read_parquet('../scrnaseq-wf/data/clusters.res.0.4.parquet')
+        tpm = pd.read_parquet(input.tpm)
+        clusters = pd.read_parquet(input.cluster)
         tpm_cluster = tpm.T.join(clusters).groupby('cluster').sum().T
         tpm_cluster.columns = [f'clus{x}' for x in tpm_cluster.columns]
         tpm_cluster.to_parquet(output[0])
@@ -249,9 +249,9 @@ rule tpm_by_cluster:
 
 rule raw_by_cluster:
     input:
-        raw='data/raw.parquet',
+        raw=c.targets['parquet']['raw'],
         cluster=rules.split_clusters.output.res4
-    output: 'data/raw.res.0.4.parquet'
+    output: c.targets['normalized']['raw_res4']
     run:
         import pandas as pd
         raw = pd.read_parquet(input.raw)
