--- a/scrnaseq-wf/config/scrnaseq_patterns.yaml
+++ b/scrnaseq-wf/config/scrnaseq_patterns.yaml
@@ -1,46 +1,46 @@
 cellranger:
-  raw: '../output/scrnaseq-wf//scrnaseq_samples/{sample}/outs/raw_gene_bc_matrices'
-  raw_h5: '../output/scrnaseq-wf//scrnaseq_samples/{sample}/outs/raw_gene_bc_matrices_h5.h5'
-  filtered: '../output/scrnaseq-wf//scrnaseq_samples/{sample}/outs/filtered_gene_bc_matrices'
-  filtered_h5: '../output/scrnaseq-wf//scrnaseq_samples/{sample}/outs/filtered_gene_bc_matrices_h5.h5'
-  bam: '../output/scrnaseq-wf//scrnaseq_samples/{sample}/outs/possorted_genome_bam.bam'
-  bai: '../output/scrnaseq-wf//scrnaseq_samples/{sample}/outs/possorted_genome_bam.bam.bai'
+  raw: '../output/scrnaseq-wf/scrnaseq_samples/{sample}/outs/raw_gene_bc_matrices'
+  raw_h5: '../output/scrnaseq-wf/scrnaseq_samples/{sample}/outs/raw_gene_bc_matrices_h5.h5'
+  filtered: '../output/scrnaseq-wf/scrnaseq_samples/{sample}/outs/filtered_gene_bc_matrices'
+  filtered_h5: '../output/scrnaseq-wf/scrnaseq_samples/{sample}/outs/filtered_gene_bc_matrices_h5.h5'
+  bam: '../output/scrnaseq-wf/scrnaseq_samples/{sample}/outs/possorted_genome_bam.bam'
+  bai: '../output/scrnaseq-wf/scrnaseq_samples/{sample}/outs/possorted_genome_bam.bam.bai'
 
 cellranger_force:
-  raw: '../output/scrnaseq-wf//scrnaseq_samples/{sample}_force/outs/raw_gene_bc_matrices'
-  raw_h5: '../output/scrnaseq-wf//scrnaseq_samples/{sample}_force/outs/raw_gene_bc_matrices_h5.h5'
-  filtered: '../output/scrnaseq-wf//scrnaseq_samples/{sample}_force/outs/filtered_gene_bc_matrices'
-  filtered_h5: '../output/scrnaseq-wf//scrnaseq_samples/{sample}_force/outs/filtered_gene_bc_matrices_h5.h5'
-  bam: '../output/scrnaseq-wf//scrnaseq_samples/{sample}_force/outs/possorted_genome_bam.bam'
-  bai: '../output/scrnaseq-wf//scrnaseq_samples/{sample}_force/outs/possorted_genome_bam.bam.bai'
+  raw: '../output/scrnaseq-wf/scrnaseq_samples/{sample}_force/outs/raw_gene_bc_matrices'
+  raw_h5: '../output/scrnaseq-wf/scrnaseq_samples/{sample}_force/outs/raw_gene_bc_matrices_h5.h5'
+  filtered: '../output/scrnaseq-wf/scrnaseq_samples/{sample}_force/outs/filtered_gene_bc_matrices'
+  filtered_h5: '../output/scrnaseq-wf/scrnaseq_samples/{sample}_force/outs/filtered_gene_bc_matrices_h5.h5'
+  bam: '../output/scrnaseq-wf/scrnaseq_samples/{sample}_force/outs/possorted_genome_bam.bam'
+  bai: '../output/scrnaseq-wf/scrnaseq_samples/{sample}_force/outs/possorted_genome_bam.bam.bai'
 
 seurat:
-  html: 'scripts/scrnaseq_combine_force.html',
-  raw: '../output/scrnaseq-wf//scrnaseq_combine_force/raw.tsv',
-  norm: '../output/scrnaseq-wf//scrnaseq_combine_force/normalized_read_counts.tsv',
-  clusters: '../output/scrnaseq-wf//scrnaseq_combine_force/clusters.tsv',
-  meta../output/scrnaseq-wf/: '../output/scrnaseq-wf//scrnaseq_combine_force/meta../output/scrnaseq-wf/.tsv',
-  biomarkers4: '../output/scrnaseq-wf//scrnaseq_combine_force/biomarkers_res.0.4.tsv',
-  biomarkers6: '../output/scrnaseq-wf//scrnaseq_combine_force/biomarkers_res.0.6.tsv',
-  biomarkers1: '../output/scrnaseq-wf//scrnaseq_combine_force/biomarkers_res.1.tsv',
+  html: 'scripts/scrnaseq_combine_force.html'
+  raw: '../output/scrnaseq-wf/scrnaseq_combine_force/raw.tsv'
+  norm: '../output/scrnaseq-wf/scrnaseq_combine_force/normalized_read_counts.tsv'
+  clusters: '../output/scrnaseq-wf/scrnaseq_combine_force/clusters.tsv'
+  metadata: '../output/scrnaseq-wf/scrnaseq_combine_force/metadata.tsv'
+  biomarkers4: '../output/scrnaseq-wf/scrnaseq_combine_force/biomarkers_res.0.4.tsv'
+  biomarkers6: '../output/scrnaseq-wf/scrnaseq_combine_force/biomarkers_res.0.6.tsv'
+  biomarkers1: '../output/scrnaseq-wf/scrnaseq_combine_force/biomarkers_res.1.tsv'
 
 parquet:
-  raw: '../output/scrnaseq-wf//raw.parquet'
-  norm: '../output/scrnaseq-wf//normalized_read_counts.parquet'
-  tsne: '../output/scrnaseq-wf//tsne.parquet'
-  clusters: '../output/scrnaseq-wf//clusters.parquet'
-  clusters4: '../output/scrnaseq-wf//clusters.res.0.4.parquet'
-  clusters6: '../output/scrnaseq-wf//clusters.res.0.6.parquet'
-  meta../output/scrnaseq-wf/: '../output/scrnaseq-wf//meta../output/scrnaseq-wf/.parquet'
-  biomarkers4: '../output/scrnaseq-wf//biomarkers_res.0.4.parquet'
-  biomarkers6: '../output/scrnaseq-wf//biomarkers_res.0.6.parquet'
-  biomarkers1: '../output/scrnaseq-wf//biomarkers_res.1.parquet'
-  gene_lens: '../output/scrnaseq-wf//gene_lengths.parquet'
+  raw: '../output/scrnaseq-wf/raw.parquet'
+  norm: '../output/scrnaseq-wf/normalized_read_counts.parquet'
+  tsne: '../output/scrnaseq-wf/tsne.parquet'
+  clusters: '../output/scrnaseq-wf/clusters.parquet'
+  clusters4: '../output/scrnaseq-wf/clusters.res.0.4.parquet'
+  clusters6: '../output/scrnaseq-wf/clusters.res.0.6.parquet'
+  metadata: '../output/scrnaseq-wf/metadata.parquet'
+  biomarkers4: '../output/scrnaseq-wf/biomarkers_res.0.4.parquet'
+  biomarkers6: '../output/scrnaseq-wf/biomarkers_res.0.6.parquet'
+  biomarkers1: '../output/scrnaseq-wf/biomarkers_res.1.parquet'
+  gene_lens: '../output/scrnaseq-wf/gene_lengths.parquet'
 
 normalized:
-  cpm: '../output/scrnaseq-wf//cpm.parquet'
-  tpm: '../output/scrnaseq-wf//tpm.parquet'
-  rpkm: '../output/scrnaseq-wf//rpkm.parquet'
-  tpm_res4: '../output/scrnaseq-wf//tpm.res.0.4.parquet'
-  raw_res4: '../output/scrnaseq-wf//raw.res.0.4.parquet'
-  zscore_tpm: '../output/scrnaseq-wf//zscore_tpm.res.0.4.parquet'
+  cpm: '../output/scrnaseq-wf/cpm.parquet'
+  tpm: '../output/scrnaseq-wf/tpm.parquet'
+  rpkm: '../output/scrnaseq-wf/rpkm.parquet'
+  tpm_res4: '../output/scrnaseq-wf/tpm.res.0.4.parquet'
+  raw_res4: '../output/scrnaseq-wf/raw.res.0.4.parquet'
+  zscore_tpm: '../output/scrnaseq-wf/zscore_tpm.res.0.4.parquet'
